testsuite/tests/v1/bin_op/concat/non_list/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l1 & 1)
   │       ───┬──  
   │          ╰──── Attempt to concatenate a list with a "Int"
───╯
